# rock-daisy-viz

./: .gitignore  Makefile  README.md  plotting.py  pyproject.toml  requirements.txt
notebooks/: gbif.ipynb  nomenclator.ipynb
rockdaisy/: main.py  nomenclator.py  plotting.py
scripts/: gbif_pull.py
