[project]
name = "rockdaisy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cartopy>=0.24.1",
    "cycler>=0.12.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyterlab-widgets>=3.0.14",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyvista>=0.45.0",
    "rasterio>=1.4.3",
    "trame>=3.9.0",
    "trame-vtk>=2.8.15",
    "trame-vuetify>=3.0.1",
]

[tool.setuptools]
packages = ["rockdaisy"]  # <-- your actual package directory

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
