[project]
name = "rock-daisy-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "cmocean>=4.0.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pygbif>=0.6.5",
    "pyvista[jupyter]>=0.45.0",
    "rasterio>=1.4.3",
    "tqdm>=4.67.1",
    "trame>=3.9.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rockdaisy"]

[tool.uv.sources]
rock-daisy-viz = { workspace = true }

[dependency-groups]
dev = []
